Use task attributes in reconfiguration of dates(RWA-2299) (#966)
* Generalise date calculation

* Resolve test failures and anamoly

* add more cleanup

* resolve different date types

* RWA-1965: Calendar enhancements - calculatedDates - Happy path and defaults

* RWA-1965: Calendar enhancements - calculatedDates - Happy path and defaults

* RWA-1965: Calendar enhancements - calculatedDates - Happy path and defaults

* RWA-1965: Calendar enhancements - calculatedDates - Happy path and defaults

* RWA-1965: Calendar enhancements - calculatedDates - Happy path and defaults

* add default date for priority date

* add tests to increase code coverage

* rebase

* Cover next hearing date and priority date for origin

* add recalculation of next hearing date and priority date

* refactor date calculators

* resolve integration tests

* Action review comments

* resolve import issue

* Origin ref based date calculator

* keep one origin ref scenario

* Add integration test for origin ref

* coven all scenarios

* add some reconfigure tests

* resolve failing test

* resolve tests for dates

* Update next hearing date by an hour

* make next hearing date sorting work

* resolve formatting issue

* Origin earliest date calculation (RWA-1975)

* all tests are resolved

* Resolve due date time issue

* resolve integration tests

* action review tests

* add tests for winter

* rebase

* Update code for intermediate dates

* Resolve all test failures

* Add integration tests

* Correct test data

* update working days in tests

* add integration tests

* refactoring base code

* add more tests fot intermediate tests

* handle default date time for intemediate dates

* initiate default values for dates

* Add default value

* add general handling of reference date

* add tests for intermediate latest dates entry

* add tests for reconfiguration on due dates

* action review comment